manifest/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  selector:
    app: microservice-demo-catalog
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: customer
spec:
  selector:
    app: microservice-demo-customer
  ports:
    - name: http
      port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  selector:
    app: microservice-demo-order
  ports:
    - name: http
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: turbine
spec:
  selector:
    app: microservice-demo-turbine-server
  ports:
    - name: http
      port: 8989


---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  selector:
    app: microservice-demo-eureka-server
  ports:
    - name: http
      port: 8761


---
apiVersion: v1
kind: Service
metadata:
  name: zuul
spec:
  selector:
    app: microservice-demo-zuul-server
  ports:
    - name: http
      port: 8080
